<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:orientation="horizontal" >
    
    <TextView
    	android:id="@+id/_kanji_errado"
    	android:layout_width="0px"
    	android:layout_weight="2"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:layout_gravity="center"
    	android:textSize="20sp"
    	android:text="@string/label_kanji"
    	 />
    <TextView
    	android:id="@+id/hiragana_errado"
    	android:layout_width="0px"
    	android:layout_weight="2"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:layout_gravity="center"
    	android:textSize="20sp"
    	android:text="@string/label_hiragana"
    	/>

    <TextView
    	android:id="@+id/traducao_errada"
    	android:layout_width="0px"
    	android:layout_weight="2"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:gravity="center"
    	android:textSize="20sp"
    	android:text="@string/label_traducao"
    	/>
    <TextView
    	android:id="@+id/quantos_erros"
    	android:layout_width="0px"
    	android:layout_weight="1"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:gravity="center"
    	android:textSize="20sp"
    	android:text="@string/label_quantos_erros"
    	 />
    

</LinearLayout>
