<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.phiworks.sumosenseinew.MainActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sumologo1" />

    
    <Button
        android:id="@+id/buttonJogarOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/botaoJogarCasual" />

    <Button
        android:id="@+id/botaoRegras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botaoRevisar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/botaoLoja" />

    <Button
        android:id="@+id/botaoTreino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/botaoTreino" />

    <Button
        android:id="@+id/botaoRevisar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botaoTreino"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/botaoRevisar" />

</RelativeLayout>