<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".Configuracoes" >

    <ImageView
        android:id="@+id/background_tela_configuracoes_imagem"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.6"
        android:scaleType="fitXY"
        android:src="@drawable/background_login_sumo_sensei" />

    <TextView
        android:id="@+id/titulo_configuracoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/configuracoes"
        android:textSize="50sp" />

    <RelativeLayout
        android:id="@+id/checkbox_e_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo_config_do_teppo"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="28dp" >

        <Button
            android:id="@+id/checkbox_mostrar_regras_treinamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/checkbox_desmarcada_regras_treinamento"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="mudarValorMostrarRegrasTreinamento" />

        <TextView
            android:id="@+id/texto_mostrar_regras_treinamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/checkbox_mostrar_regras_treinamento"
            android:layout_alignTop="@+id/checkbox_mostrar_regras_treinamento"
            android:layout_gravity="center"
            android:layout_marginLeft="3sp"
            android:layout_toRightOf="@id/checkbox_mostrar_regras_treinamento"
            android:gravity="center"
            android:text="@string/mostrar_explicacao_teppo"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/checkbox_e_texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_e_texto"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="28dp" >

        <Button
            android:id="@+id/checkbox_mostrar_kanjis_memorizar_teppo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/checkbox_desmarcada_regras_treinamento"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="mudarValorMostrarKanjisMemorizar" />

        <TextView
            android:id="@+id/texto_mostrar_kanjis_memorizar_teppo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/checkbox_mostrar_kanjis_memorizar_teppo"
            android:layout_alignTop="@+id/checkbox_mostrar_kanjis_memorizar_teppo"
            android:layout_gravity="center"
            android:layout_marginLeft="3sp"
            android:layout_toRightOf="@id/checkbox_mostrar_kanjis_memorizar_teppo"
            android:gravity="center"
            android:text="@string/mostrar_palavras_treinar_teppo"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radiosPegarListaKanjisEmOrdem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="151dp" >

        <Button
            android:id="@+id/botao_salvar_configuracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/botaookteppo"
            android:gravity="center"
            android:onClick="salvarConfiguracoes"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/salvar_configuracoes"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/botao_usar_configuracoes_padrao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_toRightOf="@id/botao_salvar_configuracoes"
            android:background="@drawable/botaookteppo"
            android:gravity="center"
            android:onClick="usarConfiguracoesPadrao"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/usar_configuracoes_padrao"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/botao_trocar_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="70dp"
        android:background="@drawable/botaookteppo"
        android:onClick="trocarUsuario"
        android:textColor="#FFFFFF"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/trocar_usuario" />

    <TextView
        android:id="@+id/titulo_config_do_teppo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkbox_e_texto"
        android:layout_below="@+id/titulo_configuracoes"
        android:text="@string/titulo_label_config_do_teppo"
        android:layout_marginTop="28dp"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/titulo_config_idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titulo_config_do_teppo"
        android:layout_below="@+id/checkbox_e_texto2"
        android:text="@string/titulo_label_idioma"
        android:layout_marginTop="28dp"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <RadioGroup android:id="@+id/radiosPegarListaKanjisEmOrdem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_alignLeft="@+id/titulo_config_idioma"
    android:layout_below="@+id/titulo_config_idioma"
    android:layout_marginBottom="20dp">
    <RadioButton
        android:id="@+id/radioPortugues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_radio_portugues"
        android:textSize="26sp"
        android:checked="true"
        android:onClick="onRadioButtonClicked"
        style="@style/MyRadioButtonStyle" />
    
    <RadioButton
        android:id="@+id/radioIngles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_radio_ingles"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:onClick="onRadioButtonClicked"
        android:enabled="false"
        style="@style/MyRadioButtonStyle"  />
    
    <RadioButton
        android:id="@+id/radioEspanhol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_radio_espanhol"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:onClick="onRadioButtonClicked"
        android:enabled="false"
        style="@style/MyRadioButtonStyle"  />
    
    </RadioGroup>

</RelativeLayout>